Immich/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres-svc
  namespace: immich
  labels:
    app: immich-postgres
spec:
  ports:
  - protocol: TCP
    name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: immich-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis-svc
  namespace: immich
  labels:
    app: immich-redis
spec:
  ports:
  - protocol: TCP
    name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: immich-redis
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml-svc
  namespace: immich
  labels:
    app: immich-ml
spec:
  ports:
  - protocol: TCP
    name: ml
    port: 3003
    targetPort: 3003
  selector:
    app: immich-ml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server-svc
  namespace: immich
  labels:
    app: immich-server
spec:
  ports:
  - protocol: TCP
    name: http
    port: 2283
    targetPort: 2283
  selector:
    app: immich-server
