Immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  labels:
    app: immich-server
spec:
  rules:
  - host: "immich.init0xff.com" # Replace with your desired hostname
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: immich-server-svc
            port:
              number: 2283
